{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 12,
  "lineage": "65dbaca3-d724-3a75-d9cd-ef932a051c70",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123403344547:loadbalancer/app/web-challenge-day26-alb-dev/08eda5f7d32fe1d7",
            "arn_suffix": "app/web-challenge-day26-alb-dev/08eda5f7d32fe1d7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-challenge-day26-alb-dev-2125411863.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123403344547:loadbalancer/app/web-challenge-day26-alb-dev/08eda5f7d32fe1d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-challenge-day26-alb-dev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ea13b5081cdd6ed1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-026e06f1b4172e999"
              },
              {
                "subnet_id": "subnet-0ee85556bf17fbcaa"
              }
            ],
            "subnets": [
              "subnet-026e06f1b4172e999",
              "subnet-0ee85556bf17fbcaa"
            ],
            "tags": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "tags_all": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "vpc_id": "vpc-09c2918532eb101f1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123403344547:listener/app/web-challenge-day26-alb-dev/08eda5f7d32fe1d7/f719f09727b64044",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123403344547:targetgroup/web-challenge-day26-tg-dev/b1138ce8822cf911",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123403344547:listener/app/web-challenge-day26-alb-dev/08eda5f7d32fe1d7/f719f09727b64044",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123403344547:loadbalancer/app/web-challenge-day26-alb-dev/08eda5f7d32fe1d7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.web",
            "module.alb.aws_lb_target_group.web",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123403344547:targetgroup/web-challenge-day26-tg-dev/b1138ce8822cf911",
            "arn_suffix": "targetgroup/web-challenge-day26-tg-dev/b1138ce8822cf911",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123403344547:targetgroup/web-challenge-day26-tg-dev/b1138ce8822cf911",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-challenge-day26-tg-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "tags_all": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c2918532eb101f1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123403344547:security-group/sg-0ea13b5081cdd6ed1",
            "description": "Allow HTTP/HTTPS inbound to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea13b5081cdd6ed1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-challenge-day26-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "123403344547",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "tags_all": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2918532eb101f1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123403344547:security-group/sg-080c9c4f3520769fd",
            "description": "Allow HTTP/HTTPS inbound to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080c9c4f3520769fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-instance-sg-dev",
            "name_prefix": "",
            "owner_id": "123403344547",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "tags_all": {
              "Day": "26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "terraform-challenge",
              "Project": "scalable-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2918532eb101f1"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}